# podcaster

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  changelog.md  conanfile.py  docker-compose.yml
.github/workflows/: release.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.cross  Dockerfile.cross.base  build_appimage.sh  build_cross_base.sh  build_dev_base.sh  build_knulli_archive.sh  build_muos_archive.sh  capnproto.py  conan_profile_aarch64  conan_profile_default  grpc.py  host_tools.py  settings_user.yml  ubuntu_noble_ports.list
nix/: conan_default  default.nix  settings_user.yml
podcaster/: action.h  database.cc  database.h  database_utils.h  imgui_utils.cc  imgui_utils.h  main.cc  message.proto  podcaster.cc  podcaster_gui.cc  podcaster_gui.h  podcaster_impl.cc  podcaster_impl.h  podcaster_impl_test.cc  sdl_mixer_utils.h  sdl_utils.cc  sdl_utils.h  sdl_utils_test.cc  tidy_utils.cc  tidy_utils.h  utils.h  version.h  xml_utils.cc  xml_utils.h
podcaster/assets/: Podcaster.sh  Podcaster_knulli.sh  Podcaster_muos.sh  podcaster.desktop  podcaster_client.desktop  podcaster_launch.sh  podcasterd.desktop
podcaster/panels/: about_window.cc  about_window.h  cleanup_window.cc  cleanup_window.h  config_window.cc  config_window.h  license_window.cc  license_window.h  show_license_window.cc  show_license_window.h  show_more_window.cc  show_more_window.h  simple_window.h  utils.h
podcaster/templates/: dependencies.h
src/: .clang-format  .gitignore  CMakeLists.txt  action.h  capnproto_utils.cc  capnproto_utils.h  conanfile.py  database.cc  database.h  database_utils.h  imgui_utils.cc  imgui_utils.h  main.cc  message.proto  podcaster.cc  podcaster_gui.cc  podcaster_gui.h  schema.capnp  sdl_mixer_utils.h  sdl_utils.cc  sdl_utils.h  simple_window.h  tidy_utils.cc  utils.h  version.h
src/assets/: OFL.txt  Podcaster.sh
src/panels/: about_window.cc  about_window.h  license_window.cc  license_window.h  show_license_window.cc  show_license_window.h  show_more_window.cc  show_more_window.h  simple_window.h  utils.h
src/templates/: dependencies.h  dependencies_example.h
